update doc rest api
